# beam-automigrate-example

./: README.md  beam-automigrate-example.cabal  default.nix
src/: Main.hs
