name:                beam-automigrate-example
version:             0.1.0.0
license:             BSD3
author:              Ken Micklas
maintainer:          kmicklas@gmail.com
category:            Database
build-type:          Simple
cabal-version:       >=1.10

executable beam-automigrate-example
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11
                     , beam-core
                     , beam-migrate
                     , beam-sqlite
                     , sqlite-simple
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
